# warpd-rs

./: Cargo.toml  README.md  config.example.toml  justfile
docs/: stats.txt
src/: config.rs  hint.rs  input.rs  main.rs  pointer.rs  target_detection.rs  wayland.rs
