[package]
name = "warpd-rs"
version = "0.1.0"
edition = "2021"
description = "A modal keyboard-driven virtual pointer for Wayland (Rust rewrite)"
license = "MIT"

[dependencies]
# Wayland client bindings
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "unstable"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
wayland-backend = "0.3"

# Cairo for 2D drawing on shared memory buffers
cairo-rs = { version = "0.20", features = ["png"] }

# Keyboard handling
xkbcommon = { version = "0.8", features = ["wayland"] }

# Shared memory helpers
rustix = { version = "0.38", features = ["shm", "fs", "mm"] }
memmap2 = "0.9"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1"
thiserror = "2"

# Config file parsing
toml = "0.8"
serde = { version = "1", features = ["derive"] }
dirs = "6"
