[package]
name = "warpd-rs"
version = "0.2.0"
edition = "2021"
description = "keyboard-driven virtual pointer for Wayland"
license = "MIT"
repository = "https://github.com/jesseconis/warpd-rs"
homepage = ""
documentation = "https://docs.rs/warpd-rs"
publish = false

[features]
default = ["opencv"]
opencv = ["dep:opencv"]

[dependencies]
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "unstable"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
wayland-backend = "0.3"
cairo-rs = { version = "0.20", features = ["png"] }
xkbcommon = { version = "0.8", features = ["wayland"] }
rustix = { version = "0.38", features = ["shm", "fs", "mm", "event"] }
memmap2 = "0.9"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
thiserror = "2"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
dirs = "6"
opencv = { version = "0.98.2", optional = true, default-features = false, features = ["clang-runtime", "imgproc", "imgcodecs"] }

[workspace.metadata.release]
sign-commit = true
sign-tag = true
pre-release-commit-message = "chore💤: release {{crate_name}} v{{version}}"
tag-message = "chore💤: release {{crate_name}} v{{version}}"

